--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -21,6 +21,10 @@ packageExtensions:
       typescript:
         optional: true
 
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+
 supportedArchitectures:
   cpu:
     - current
